--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Flappy Bird - Benny Lim</title>
-    <link href="https://fonts.googleapis.com/css?family=Teko:700">
+    <title>Flappy Bird</title>
     <style>
         canvas{
             border: 1px solid #000;
